# ksif-kis-api

./: .cursorignore  .env.template  .gitignore  README.md  create_secret.py  demo.ipynb  original_kis_open_api.ipynb  pyproject.toml
.cursor/: fix-product-json.ps1  fix-product-json.sh  fix-project-json_README.txt  mcp_candidates.md  mcp_json_template.json
.cursor/rules/: architecture-implementation-specialist.mdc  expert-architecture-consultant.mdc  global-dev-guideline.mdc  global-learning.mdc  kor-translator.mdc  meta-sys-prompt-engineer.mdc  mvp-business-consultant.mdc  taskmaster-workflow.mdc  to-be-sys-architect.mdc
app/: data_service.py  ksif_dashboard.py
docs/references/: python-kis-tutorial.md  v0-ksif-dashboard.md
