[tool.poetry]
name = "ksif-kis-api"
version = "0.1.0"
description = ""
authors = ["jaepil-choi.laptop <chljeffreyz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
numpy = "^2.2.4"
scipy = "^1.15.2"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
plotly = "^6.0.1"
scikit-learn = "^1.6.1"
statsmodels = "^0.14.4"
parquet = "^1.3.1"
pyarrow = "^19.0.1"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.1.0"
tqdm = "^4.67.1"
prophet = "^1.1.6"
pmdarima = "^2.0.4"
python-kis = "^2.1.3"
lightweight-charts = "^2.1"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
